# lsp_agent

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  build.sh  install_deps.sh
.github/: copilot-instructions.md
agent/: Cargo.toml  web-environment.md
agent/prompts/: Cargo.toml  web-environment.md
agent/prompts/src/: lib.rs
agent/shared_document/: Cargo.toml
agent/shared_document/src/: lib.rs
agent/src/: document.rs  lib.rs  prompts.rs
client/: package.json
client/src/: extension.ts
prompts/: Cargo.toml  web-environment.md
prompts/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
shared_document/: Cargo.toml
shared_document/src/: lib.rs
traits/: Cargo.toml
traits/src/: lib.rs
vs_code_lsp/client/: package-lock.json  package.json
vs_code_lsp/client/src/: extension.ts
vs_code_lsp/server/: Cargo.toml
vs_code_lsp/server/src/: main.rs
web/: Cargo.toml
web/src/: main.rs
