[package]
name = "agent"
version = "0.1.0"
edition = "2024"

[dependencies]
automerge_repo = { workspace = true, features = ["tokio"] }
autosurgeon = { workspace = true }
automerge = { workspace = true }
axum = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
traits = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
