[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
tower-lsp = "0.20"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
automerge_repo = { version = "0.3.0", features = ["tokio"] }
autosurgeon = "0.10.1"
automerge = "0.7.3"
clap = { version = "4.5.54", features = ["derive"] }
futures = "0.3.31"
uuid = { version = "1.11.0", features = ["serde", "v4"] }
shared_document = { path = "../shared_document" }
prompts = { path = "../prompts" }
axum = "0.7"
