[package]
name = "web"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
automerge_repo = { workspace = true, features = ["tokio"] }
autosurgeon = { workspace = true }
automerge = { workspace = true }
futures = { workspace = true }
uuid = { workspace = true }
agent = { workspace = true }
traits = { workspace = true }
async-trait = { workspace = true }
reqwest = { workspace = true }
axum = { workspace = true }
clap = { workspace = true }
wry = { workspace = true }
tao = { workspace = true }
